--- a/code/app/src/main/res/layout/fragment_admin_group_member_details.xml
+++ b/code/app/src/main/res/layout/fragment_admin_group_member_details.xml
@@ -53,26 +53,25 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 />
 
+            <!-- row: Username -->
             <ImageView
                 android:id="@+id/ivSmobGroupMember"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/image_header_height"
-                android:layout_marginTop="@dimen/vertical_margin_image"
-                android:layout_marginBottom="@dimen/vertical_margin_image"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
+                android:layout_marginTop="@dimen/vertical_margin_image"
                 android:layout_marginEnd="@dimen/horizontal_margin_small"
+                android:layout_marginBottom="@dimen/vertical_margin_image"
                 android:contentDescription="@string/adminMemberDescription"
                 android:scaleType="fitCenter"
-                app:layout_constraintTop_toTopOf="@id/tvHeading"
                 app:layout_constraintBottom_toTopOf="@+id/clUsername"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tvHeading"
                 app:profileImage="@{viewModel.currGroupMember.imageUrl}"
-                tools:src="@drawable/ic_baseline_person_24"
-                />
+                tools:src="@drawable/ic_baseline_person_24" />
 
-            <!-- row: Username -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clUsername"
                 android:layout_width="match_parent"
@@ -244,6 +243,25 @@
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <Button
+                android:id="@+id/btAddToGroup"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vertical_margin_large"
+                android:layout_marginBottom="@dimen/vertical_margin_large"
+                android:layout_marginStart="@dimen/horizontal_margin_small"
+                android:paddingStart="@dimen/button_padding"
+                android:paddingEnd="@dimen/button_padding"
+                android:text="@string/add_to_group"
+                android:textColor="@color/swipePrimaryColor"
+                android:textSize="@dimen/button_text_size"
+                android:textStyle="bold"
+                app:fadeVisible="@{viewModel.enableAddButton}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
