--- a/code/app/src/main/res/navigation/nav_graph_admin.xml
+++ b/code/app/src/main/res/navigation/nav_graph_admin.xml
@@ -61,6 +61,9 @@
         <action
             android:id="@+id/action_smobAdminGroupsFragment_to_smobAdminSelectFragment"
             app:destination="@id/smobAdminSelectFragment" />
+        <action
+            android:id="@+id/action_smobAdminGroupsFragment_to_smobAdminGroupMembersListFragment"
+            app:destination="@id/smobAdminGroupMembersListFragment" />
     </fragment>
 
     <fragment
@@ -84,24 +87,24 @@
             android:id="@+id/action_smobAdminGroupMembersListFragment_to_smobAdminGroupsFragment"
             app:destination="@id/smobAdminGroupsFragment" />
         <action
-            android:id="@+id/action_smobAdminGroupMembersListFragment_to_smobAdminGroupMembersEditFragment"
-            app:destination="@id/smobAdminGroupMembersEditFragment" />
+            android:id="@+id/action_smobAdminGroupMembersListFragment_to_smobAdminGroupMembersSelectFragment"
+            app:destination="@id/smobAdminGroupMembersSelectFragment" />
         <action
             android:id="@+id/action_smobAdminGroupMembersListFragment_to_smobAdminGroupMemberDetailsFragment"
             app:destination="@id/smobAdminGroupMemberDetailsFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/smobAdminGroupMembersEditFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.groupMembers.AdminGroupMembersEditFragment"
-        android:label="Edit Group Members"
-        tools:layout="@layout/fragment_admin_group_members_edit"
+        android:id="@+id/smobAdminGroupMembersSelectFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.groupMembers.AdminGroupMembersSelectFragment"
+        android:label="Select Group Members"
+        tools:layout="@layout/fragment_admin_group_members_select"
         >
         <action
-            android:id="@+id/action_smobAdminGroupMembersEditFragment_to_smobAdminGroupMembersListFragment"
+            android:id="@+id/action_smobAdminGroupMembersSelectFragment_to_smobAdminGroupMembersListFragment"
             app:destination="@id/smobAdminGroupMembersListFragment" />
         <action
-            android:id="@+id/action_smobAdminGroupMembersEditFragment_to_smobAdminGroupMemberDetailsFragment"
+            android:id="@+id/action_smobAdminGroupMembersSelectFragment_to_smobAdminGroupMemberDetailsFragment"
             app:destination="@id/smobAdminGroupMemberDetailsFragment" />
     </fragment>
 
