--- a/code/app/src/main/res/layout/fragment_admin_group_member_list.xml
+++ b/code/app/src/main/res/layout/fragment_admin_group_member_list.xml
@@ -52,7 +52,7 @@
                     app:layout_constraintTop_toBottomOf="@id/ivSmobAdminGroupMembers"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:stateFlowResource="@{viewModel.smobGroupMembers}" />
+                    app:stateFlow="@{viewModel.smobGroupMemberWithGroupData}" />
 
                 <TextView
                     android:id="@+id/noDataTextView"
