--- a/code/app/src/main/res/layout/fragment_admin_groups.xml
+++ b/code/app/src/main/res/layout/fragment_admin_groups.xml
@@ -20,7 +20,7 @@
             android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context="com.tanfra.shopmob.smob.ui.admin.groups.AdminGroupsFragment">
+            tools:context=".smob.ui.admin.select.groups.AdminGroupsFragment">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
