--- a/code/app/src/main/res/navigation/nav_graph_admin.xml
+++ b/code/app/src/main/res/navigation/nav_graph_admin.xml
@@ -43,7 +43,7 @@
 
     <fragment
         android:id="@+id/smobAdminProfileFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.profile.AdminProfileFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.select.profile.AdminProfileFragment"
         android:label="Administer User Profile"
         tools:layout="@layout/fragment_admin_profile"
         >
@@ -54,7 +54,7 @@
 
     <fragment
         android:id="@+id/smobAdminGroupsFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.groups.AdminGroupsFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.select.groups.AdminGroupsFragment"
         android:label="Administer Groups"
         tools:layout="@layout/fragment_admin_groups"
         >
@@ -68,7 +68,7 @@
 
     <fragment
         android:id="@+id/smobAdminGroupsEditFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.groups.AdminGroupsEditFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.select.groups.AdminGroupsEditFragment"
         android:label="Add New Group"
         tools:layout="@layout/fragment_admin_groups_edit"
         >
@@ -79,7 +79,7 @@
 
     <fragment
         android:id="@+id/smobAdminGroupMemberListFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.groupMemberList.AdminGroupMemberListFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.select.groups.groupMemberList.AdminGroupMemberListFragment"
         android:label="Show Group Members"
         tools:layout="@layout/fragment_admin_group_member_list"
         >
@@ -96,7 +96,7 @@
 
     <fragment
         android:id="@+id/smobAdminGroupMemberSelectFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.groupMemberSelect.AdminGroupMemberSelectFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.select.groups.groupMemberSelect.AdminGroupMemberSelectFragment"
         android:label="Select Group Members"
         tools:layout="@layout/fragment_admin_group_member_select"
         >
@@ -110,7 +110,7 @@
 
     <fragment
         android:id="@+id/smobAdminGroupMemberDetailsFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.groupMemberList.AdminGroupMemberDetailsFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.select.groups.groupMemberList.AdminGroupMemberDetailsFragment"
         android:label="Group Member Details"
         tools:layout="@layout/fragment_admin_group_member_details">
         <action
@@ -120,7 +120,7 @@
 
     <fragment
         android:id="@+id/smobAdminListsFragment"
-        android:name="com.tanfra.shopmob.smob.ui.admin.lists.AdminListsFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.select.lists.AdminListsFragment"
         android:label="Administer Lists"
         tools:layout="@layout/fragment_admin_lists"
         >
